Added some functionallity and run php-cs-fixer

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
     "repositories": [
         {"type": "composer", "url": "https://repo.packagist.com/brader/"},
         {"packagist.org": false}
-    ]
+    ],
+    "require": {
+        "guzzlehttp/guzzle": "^6.3"
+    }
 }
