--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-0": {
-            "FINDOLOGIC\\Request": "src/"
+            "FINDOLOGIC": "src/"
         }
     },
     "autoload-dev": {
