--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,13 @@
     "authors": [
         {
             "name": "Dominik Brader",
-            "email": "d.brader@findologic.com"
+            "email": "d.brader@findologic.com",
+            "role": "Maintainer"
+        },
+        {
+            "name": "Chris Ortner",
+            "email": "chris@codexfons.com",
+            "role": "Developer"
         }
     ],
     "require": {
