--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.35 || ^5.7 || ^6.4 || ^7.0"
+        "phpunit/phpunit": "^4.8.35 || ^5.7 || ^6.4 || ^7.0",
+        "symfony/console": "v3.2.9",
+        "friendsofphp/php-cs-fixer": "v2.8.2"
     },
     "autoload": {
         "psr-0": {
