Remove old code base

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
     env: PHPUNIT_VERSION="7.0"
   - php: 7.0
     env: PHPUNIT_VERSION="7.0"
+  allow_failures:
+  - php: nightly
 
 install:
   - if [[ "$PHPUNIT_VERSION" = "6.5" ]]; then composer require --dev --no-update phpunit/phpunit:~6.5; fi
