Add missing sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
 install:
   - if [[ "$PHPUNIT_VERSION" = "6.5" ]]; then composer require --dev --no-update phpunit/phpunit:~6.5; fi
   - if [[ "$PHPUNIT_VERSION" = "7.0" ]]; then composer require --dev --no-update phpunit/phpunit:~7.0; fi
-  - apt-get install php-xml
+  - sudo apt-get install php-xml
   - composer install
 script:
   # Run style fixer in test mode on all source files. Will exit with a non-zero
