--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "ext-SimpleXML": "*"
+        "ext-SimpleXML": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.35 || ^5.7 || ^6.4 || ^7.0",
