--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.35 || ^5.7 || ^6.4 || ^7.0",
+        "phpunit/phpunit": "^6.5 || ^7.0",
         "symfony/console": "v3.2.9",
         "friendsofphp/php-cs-fixer": "^2.13"
     },
@@ -34,5 +34,18 @@
         "psr-0": {
             "FINDOLOGIC\\Request\\Tests": "tests/"
         }
+    },
+    "scripts": {
+        "check-code-style": [
+            "php-cs-fixer fix --dry-run src",
+            "php-cs-fixer fix --dry-run tests"
+        ],
+        "fix-code-style": [
+            "php-cs-fixer fix src",
+            "php-cs-fixer fix tests"
+        ],
+        "run-tests": [
+            "phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
+        ]
     }
 }
