--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5 || ^7.0",
+        "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
         "symfony/console": "v3.2.9",
         "friendsofphp/php-cs-fixer": "^2.13"
     },
