Codecov report will be generated again

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ script:
   # Run style fixer in test mode on all source files. Will exit with a non-zero
   # return code if something needs changing.
   - composer run-script check-code-style
-  - composer run-script run-tests
+  - ./vendor/bin/phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml
 after_success:
 - bash <(curl -s https://codecov.io/bash)
