--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
         "fix-code-style": [
             "php-cs-fixer fix src",
             "php-cs-fixer fix tests"
+        ],
+        "run-tests": [
+            "phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
         ]
     }
 }
