--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "ext-SimpleXML": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "vlucas/valitron": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
