--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
             "name": "Chris Ortner",
             "email": "chris@codexfons.com",
             "role": "Developer"
+        },
+        {
+            "name": "Markus Machatschek",
+            "email": "m.machatschek@findologic.com",
+            "role": "Developer"
         }
     ],
     "require": {
