--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,17 @@
             "role": "Developer"
         }
     ],
+    "config": {
+        "platform": {
+            "php": "5.6"
+        }
+    },
     "require": {
+        "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.3",
+        "vlucas/valitron": "^1.4",
         "ext-SimpleXML": "*",
-        "ext-json": "*",
-        "vlucas/valitron": "^1.4"
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
