--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,14 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
 
 install:
   - composer install
 script:
   # Run style fixer in test mode on all source files. Will exit with a non-zero
   # return code if something needs changing.
-  - composer run-script check-code-style
-  - composer run-script run-tests
+  - composer lint
+  - composer test
 after_success:
   - bash <(curl -s https://codecov.io/bash)
