--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
-        "symfony/console": "v3.2.9",
-        "friendsofphp/php-cs-fixer": "^2.13"
+        "friendsofphp/php-cs-fixer": "^2.14"
     },
     "autoload": {
         "psr-0": {
@@ -48,15 +47,15 @@
         }
     },
     "scripts": {
-        "check-code-style": [
+        "lint": [
             "php-cs-fixer fix --dry-run src",
             "php-cs-fixer fix --dry-run tests"
         ],
-        "fix-code-style": [
+        "fix": [
             "php-cs-fixer fix src",
             "php-cs-fixer fix tests"
         ],
-        "run-tests": [
+        "test": [
             "phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
         ]
     }
