--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
         "guzzlehttp/guzzle": "^6.3",
         "vlucas/valitron": "^1.4",
         "ext-SimpleXML": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-dom": "*",
+        "ext-libxml": "*",
+        "findologic/xml-response-schema": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
