--- a/composer.json
+++ b/composer.json
@@ -52,12 +52,12 @@
     },
     "scripts": {
         "lint": [
-            "php-cs-fixer fix --dry-run src",
-            "php-cs-fixer fix --dry-run tests"
+            "php-cs-fixer fix --dry-run --using-cache=no src",
+            "php-cs-fixer fix --dry-run --using-cache=no tests"
         ],
         "fix": [
-            "php-cs-fixer fix src",
-            "php-cs-fixer fix tests"
+            "php-cs-fixer fix --using-cache=no src",
+            "php-cs-fixer fix --using-cache=no tests"
         ],
         "test": [
             "phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
