--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "findologic/xml-response-schema": "^2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
+        "phpunit/phpunit": "^5 || ^6.5 || ^7.0 || ^8",
         "friendsofphp/php-cs-fixer": "^2.14"
     },
     "autoload": {
