--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     },
     "require": {
         "php": ">=5.6",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "5.3.4",
+        "guzzlehttp/psr7": "1.4.2",
         "vlucas/valitron": "^1.4",
         "ext-SimpleXML": "*",
         "ext-json": "*",
