--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
     },
     "require": {
         "php": ">=5.6",
-        "guzzlehttp/guzzle": "^6.3",
         "vlucas/valitron": "^1.4",
         "ext-SimpleXML": "*",
         "ext-json": "*",
         "ext-dom": "*",
         "ext-libxml": "*",
-        "findologic/xml-response-schema": "^2.1"
+        "findologic/xml-response-schema": "^2.1",
+        "findologic/guzzle": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
@@ -61,5 +61,11 @@
         "test": [
             "phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:findologic/guzzle.git"
+        }
+    ]
 }
