--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "ext-dom": "*",
         "ext-libxml": "*",
         "findologic/xml-response-schema": "^2.1",
-        "findologic/guzzle": "dev-master"
+        "findologic/guzzle": "^6.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
