--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 .gitattributes         export-ignore
+.gitignore             export-ignore
+.travis.yml            export-ignore
+phpunit.xml            export-ignore
+
 /.github/              export-ignore
 /.git/                 export-ignore
-.gitignore             export-ignore
-/phpunit.xml           export-ignore
+/examples/             export-ignore
 /tests/                export-ignore
-.travis.yml            export-ignore
