--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
             "name": "Markus Machatschek",
             "email": "m.machatschek@findologic.com",
             "role": "Developer"
+        },
+        {
+            "name": "Huzaifa Mustafa",
+            "email": "24492269+zaifastafa@users.noreply.github.com",
+            "role": "developer"
         }
     ],
     "config": {
