--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
             "php-cs-fixer fix --using-cache=no tests"
         ],
         "test": [
-            "phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
+            "XDEBUG_MODE=coverage phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
         ]
     },
     "repositories": [
