--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -3,7 +3,7 @@ name: Tests
 on: [push]
 
 jobs:
-  build:
+  phpunit:
 
     runs-on: ubuntu-latest
     strategy:
@@ -21,7 +21,7 @@ jobs:
       - name: Setup PHP with Composer 2
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php-version }}
           coverage: xdebug
           tools: composer:v2
 
