--- a/composer.json
+++ b/composer.json
@@ -27,22 +27,22 @@
     ],
     "config": {
         "platform": {
-            "php": "5.6"
+            "php": "7.4"
         }
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.4",
         "vlucas/valitron": "^1.4",
         "ext-SimpleXML": "*",
         "ext-json": "*",
         "ext-dom": "*",
         "ext-libxml": "*",
-        "findologic/xml-response-schema": "^2.1",
+        "findologic/xml-response-schema": "^2.2",
         "findologic/guzzle": "^6.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5 || ^6.5 || ^7.0",
-        "friendsofphp/php-cs-fixer": "^2.14"
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.2"
     },
     "autoload": {
         "psr-4": {
@@ -56,7 +56,7 @@
     },
     "scripts": {
         "lint": [
-            "php-cs-fixer fix --dry-run --using-cache=no src",
+            "php-cs-fixer fix --allow-risky=yes --dry-run --using-cache=no src",
             "php-cs-fixer fix --dry-run --using-cache=no tests"
         ],
         "fix": [
