--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "friendsofphp/php-cs-fixer": "^3.2"
+        "friendsofphp/php-cs-fixer": "^3.2",
+        "phpstan/phpstan": "^1.1"
     },
     "autoload": {
         "psr-4": {
@@ -55,7 +56,10 @@
         }
     },
     "scripts": {
-        "lint": "php-cs-fixer fix --allow-risky=yes --dry-run --using-cache=no",
+        "lint": [
+            "php-cs-fixer fix --allow-risky=yes --dry-run --using-cache=no",
+            "phpstan analyse src tests --level=7"
+        ],
         "fix": "php-cs-fixer fix --allow-risky=yes --using-cache=no",
         "test": [
             "XDEBUG_MODE=coverage phpunit --configuration phpunit.xml --coverage-text --coverage-clover=coverage.xml"
