--- a/composer.json
+++ b/composer.json
@@ -28,22 +28,23 @@
     "config": {
         "platform": {
             "php": "7.4"
-        }
+        },
+        "sort-packages": true
     },
     "require": {
-        "php": ">=7.4",
-        "vlucas/valitron": "^1.4",
-        "ext-SimpleXML": "*",
-        "ext-json": "*",
         "ext-dom": "*",
+        "ext-json": "*",
         "ext-libxml": "*",
+        "ext-SimpleXML": "*",
+        "findologic/guzzle": "^6.5",
         "findologic/xml-response-schema": "^2.2",
-        "findologic/guzzle": "^6.5"
+        "php": ">=7.4",
+        "vlucas/valitron": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "friendsofphp/php-cs-fixer": "^3.2",
-        "phpstan/phpstan": "^1.1"
+        "friendsofphp/php-cs-fixer": "^3.4",
+        "phpstan/phpstan": "^1.2",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
