--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,14 @@
         "sort-packages": true
     },
     "require": {
+        "ext-SimpleXML": "*",
         "ext-dom": "*",
         "ext-json": "*",
         "ext-libxml": "*",
-        "ext-SimpleXML": "*",
         "findologic/guzzle": "^6.5",
         "findologic/xml-response-schema": "^2.2",
         "php": ">=7.4",
+        "rakit/validation": "^1.4",
         "vlucas/valitron": "^1.4"
     },
     "require-dev": {
